--- a/src/ShopBundle/Resources/views/Default/index.html.twig
+++ b/src/ShopBundle/Resources/views/Default/index.html.twig
@@ -12,7 +12,7 @@
                 </p>
                 <div class="jumbotron">
                     <h1>Hello, world!</h1>
-                    <p>This is an example to show the potential of an offcanvas layout pattern in Bootstrap. Try some responsive-range viewport sizes to see it in action.</p>
+                    <p>Справа категории, внизу пагинатор, через минуту вылезет попап.</p>
                 </div>
                 <div class="row">
 
