--- a/src/ShopBundle/Resources/views/Product/item.html.twig
+++ b/src/ShopBundle/Resources/views/Product/item.html.twig
@@ -9,7 +9,7 @@
             <p>product price: {{ product.price }}</p>
 
             <br><br><br>
-            <h4>Basic List Group</h4>
+            <h4>связаные категории</h4>
             <ul class="list-group">
                 {% for category in product.categories %}
                     <li class="list-group-item">
