--- a/src/ShopBundle/Resources/views/Default/index.html.twig
+++ b/src/ShopBundle/Resources/views/Default/index.html.twig
@@ -13,6 +13,8 @@
                 <div class="jumbotron">
                     <h1>Hello, world!</h1>
                     <p>Справа категории, внизу пагинатор, через минуту вылезет попап.</p>
+                    <p>стандартный юзер login:admin pass:admin</p>
+                    <p>для примера видно 4ри товара и три категории, остальное "рыба" без связей</p>
                 </div>
                 <div class="row">
 
@@ -38,7 +40,6 @@
                             'name' : category.name
                         }) }}" class="list-group-item">{{ category.name }} ({{ category.products|length }})</a>
                     {% endfor %}
-                    {#<a href="#" class="list-group-item active">Link</a>#}
                 </div>
             </div><!--/.sidebar-offcanvas-->
         </div><!--/row-->
