--- a/src/ShopBundle/Resources/views/base.html.twig
+++ b/src/ShopBundle/Resources/views/base.html.twig
@@ -37,6 +37,8 @@
                 <div id="navbar" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="/">Home</a></li>
+                        <li class="active"><a href="/logout">logout</a></li>
+                        <li class="active"><a href="/admin">admin</a></li>
                     </ul>
                 </div><!-- /.nav-collapse -->
             </div><!-- /.container -->
